# EmLib

./: .gitmodules  CMakeLists.txt  main.c  meson.build
eLOG/: CMakeLists.txt  elog.cpp  elog.hpp  meson.build
subprojects/: CherryRB.wrap  HAL.wrap  Hardware.wrap  SEGGER_RTT.wrap  template_schedule.wrap
